--- a/src/app/global/get-in-touch/get-in-touch.component.html
+++ b/src/app/global/get-in-touch/get-in-touch.component.html
@@ -7,7 +7,7 @@
       Enough talking, let's get right to it.
     </p>
 
-    <div class="text-center margin-bottom--lg">
+    <div class="text-center margin-bottom--lg margin-top--lg">
       <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--black"><span aria-hidden="true">🚀 </span>Let's
         go!</a>
     </div>
