--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -8,10 +8,7 @@
 
     <div class="line--top line--bottom line hero__text-wrap">
       <div class="hero__text text-center" data-aos="fade-up" data-aos-delay="400">
-        A
-        <span *ngIf="router.url === '/'" class="hero__lead-letter">branding agency</span>
-        <a *ngIf="router.url !== '/'" class="hero__lead-letter link-plain" href="https://jupiterandthegiraffe.com">branding studio</a>
-        out of this world.
+        A web studio out of this world.
       </div>
     </div>
     <div class="row">
@@ -41,10 +38,10 @@
   </div>
 
   <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
-    <div class="h1">Branding a better future</div>
-    
+    <div class="h1">Let's Build the future</div>
+
     <p class="hero__tagline">
-      Startup to enterprise. Beautiful design for future-thinking technology that takes us to the stars
+      Beautiful SaaS product design and cutting-edge code for future-thinkers in the digital age.
     </p>
 
     <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
