--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,33 +1,30 @@
 <section class="home">
   <div class="container-fluid">
-    <h1 class="sr-only">Brand Strategy & Design studio for Future-Tech Companies and Startups</h1>
+    <h1 class="sr-only">Design &amp; development powerhouse for SaaS products and websites</h1>
 
     <section *ngIf="content?.acf.video_id">
-      <h2 class="sr-only">Who are Jupiter and the Giraffe?</h2>
-      
+      <h2 class="sr-only">Who is Jupiter and the Giraffe?</h2>
+
       <div appParallax [ratio]=".15" class="home__video">
-        <div 
-          appVideoLoad 
-          class="home__video-container" 
-          [style.background-image]="'url(' + content.acf.video_poster + ')'"
-          [videoId]="content.acf.video_id"
-        >
+        <div appVideoLoad class="home__video-container"
+          [style.background-image]="'url(' + content.acf.video_poster + ')'" [videoId]="content.acf.video_id">
         </div>
       </div>
     </section>
 
     <div class="home__tagline-wrapper">
-      <div data-aos="fade-in" data-aos-duration="1000" >
-        <h2 class="home__tagline" class="hidden-md-up">
+      <div data-aos="fade-in" data-aos-duration="1000">
+        <h2 class="hidden-md-up home__tagline">
           <em class="home__tagline-border">
-            A brand strategy and design studio that believes in the future of humanity. 
-            We help technology companies behind the tech reach new users, scale and stand out in the market.
+            We bring together strategy, design and development from ideation to launch of brilliant SaaS products that
+            change the world.
           </em>
         </h2>
         <p class="home__tagline hidden-md">
-          <em appParallax [ratio]=".15" direction="horizontal" style="display: inline-block;" class="home__tagline-border">
-            A brand strategy and design studio that believes in the future of humanity. 
-            We help technology companies behind the tech reach new users, scale and stand out in the market.
+          <em appParallax [ratio]=".15" direction="horizontal" style="display: inline-block;"
+            class="home__tagline-border">
+            We bring together strategy, design and development from ideation to launch of brilliant SaaS products that
+            change the world.
           </em>
         </p>
       </div>
@@ -35,165 +32,15 @@
   </div>
 
   <div (appDeferLoad)="showMyElement=true">
-    <section class="section" *ngIf="this.work" style="background: #93ccf8;">
-      <div class="home__work-content container-fluid">
-        <header>
-          <h2>Latest Applications<span class="sr-only"> for Tech Companies and Startups</span></h2>
-        </header>
-    
-        <div class="row">
-          <div class="col-md-8">
-            <a 
-                class="home__work-item"
-                [ngStyle]="{'background-image': 'url(' + this.work[0].acf.homepage_image.sizes.medium_large + ')'}"
-                [routerLink]="'/case-study/' + this.work[0].slug"
-                *ngIf="showMyElement"
-              >
-                <span class="text">
-                  <span class="home__work-case-study">View<span class="sr-only"> {{this.work[0].title.rendered}}</span> case study</span>
-                </span>
-              </a>
-            </div>
-            <div class="col-md-4">
-              <a
-                class="home__work-item"
-                [ngStyle]="{'background-image': 'url(' + this.work[1]._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url + ')'}"
-                [routerLink]="'/case-study/' + this.work[1].slug"
-                *ngIf="showMyElement"
-                >
-                <span class="text">
-                  <span class="home__work-case-study">View<span class="sr-only"> {{this.work[1].title.rendered}}</span> case study</span>
-                </span>
-              </a>
-              <a
-                class="home__work-item"
-                [ngStyle]="{'background-image': 'url(' + this.work[2]._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url + ')'}"
-                [routerLink]="'/case-study/' + this.work[2].slug"
-                *ngIf="showMyElement"
-              >
-            <span class="text">
-              <span class="home__work-case-study">View<span class="sr-only"> {{this.work[2].title.rendered}}</span> case study</span>
-            </span>
-          </a>
-          </div>
-        </div>
-    
-        <div class="text-center padding-top--lg padding-bottom--lg">
-          <a href="" [routerLink]="['/work']" class="btn btn--lg btn--outline">
-            View the rest of our portfolio
-          </a>
-        </div>
-      </div>
-    </section>
-  
-    <div class="container-fluid">
-      <section class="section home__services">
-        <header>
-          <h2>
-            <div class="sr-only">Branding and Design </div>
-            <span style="display: inline-block;">Services</span>
-            <div class="sr-only"> for Tech Companies and Startups</div>
-          </h2>
-        </header>
-  
-        <p class="home__lead">
-          Jupiter and the Giraffe is <em>the</em>&nbsp;<strong>brand strategy</strong> and <strong>digital design studio</strong> for <strong>technology companies</strong>.
-          We're extremely passionate about building brands who's tech will empower the lives of many and drive towards a better future.
-          Our data-driven and creative insight combined with beautiful design means your brand is deployed with clarity and depth.
-        </p>
-        
-        <div class="home__services">
-          <div class="row">
-            <section *ngFor="let service of services; let i = index;" class="col-md-4 margin-bottom--lg text-left" data-aos="fade-up" [attr.data-aos-delay]="100 * i">              <img
-                *ngIf="showMyElement"
-                [src]="service._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url"
-                [srcset]="service._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url + ' 2x, ' + service._embedded['wp:featuredmedia'][0].media_details.sizes.medium.source_url + ' 1x'"
-                [alt]="service._embedded['wp:featuredmedia'][0].alt_text"
-                class="img-fluid"
-              >
-    
-              <h3 class="home__service-title">{{service.title.rendered}}</h3>
-              
-              <div class="home__service-text">
-                <div [innerHTML]="service.excerpt.rendered"></div>
-      
-                <div class="hidden-md-up">
-                  <a [routerLink]="'/service/' + service.slug">Learn more about {{service.title.rendered}}</a>
-                </div>
-              </div>
-            </section>
-          </div>
-          <div class="row hidden-md">
-            <div *ngFor="let service of services" class="col-md-4 margin-bottom--lg text-left">
-              <div class="home__service-learn">
-                <a [routerLink]="'/service/' + service.slug">Learn more <span class="sr-only">about {{service.title.rendered}}</span> <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+    <app-case-studies-component *ngIf="work" [show]="showMyElement" [data]="[work[0], work[1], work[2]]"></app-case-studies-component>
+    <app-friends-component *ngIf="showMyElement"></app-friends-component>
 
-        <div class="text-center padding-top--lg padding-bottom--lg">
-            <a href="" [routerLink]="['/what-we-do']" class="btn btn--lg btn--outline btn--dark">
-              What can we do?
-            </a>
-          </div>
-      </section>
+    <div class="container-fluid">
+      <app-benefits-component *ngIf="benefits" [benefits]="benefits"></app-benefits-component>
+      <app-quotes-component *ngIf="quotes" [quotes]="quotes"></app-quotes-component>
+      <app-we-are-component></app-we-are-component>
+      <app-services-component [services]="services"></app-services-component>
+      <app-get-in-touch></app-get-in-touch>
     </div>
   </div>
 </section>
-
-<div (appDeferLoad)="showMyElement=true">
-  <app-friends-component *ngIf="showMyElement"></app-friends-component>
-
-  <section class="home">
-    <div class="container-fluid">
-      <section>
-        <header>
-          <h2><div class="sr-only">Remote Brand Strategy and Design Studio - </div>
-            Creativity Without Borders</h2>
-        </header>
-
-        <p class="home__lead">
-          We believe in the remote working revolution. Our vast world-wide network means we can bring you cream of the crop talent that is bespoke to your needs.
-        </p>
-      </section>
-    </div>
-    <div *ngIf="showMyElement">
-      <agm-map [zoom]="2" [latitude]="0" [longitude]="115.1385" [mapDraggable]="true" [scrollwheel]="false" [zoomControl]="false"
-                [streetViewControl]="false" [styles]="styles">
-        <agm-marker [latitude]="-8.6478" [longitude]="115.1385" aria-label="Bali"></agm-marker>
-        <agm-marker [latitude]="3.1390" [longitude]="101.6869" [opacity]=".7" aria-label="Kuala Lumpur"></agm-marker>
-        <agm-marker [latitude]="-37.8136" [longitude]="144.9631" [opacity]=".7" aria-label="Melbourne"></agm-marker>
-        <agm-marker [latitude]="-33.8688197" [longitude]="151.2092955" [opacity]=".7" aria-label="Sydney"></agm-marker>
-        <agm-marker [latitude]="51.5074" [longitude]="0.1278" [opacity]=".7" aria-label="London"></agm-marker>
-      </agm-map>
-    </div>
-
-    <div class="container-fluid text-center">
-      <div class="padding-top--lg padding-bottom--lg">
-        <a [routerLink]="['/what-we-do']" class="btn btn--lg btn--outline btn--dark">
-          Work with us
-        </a>
-      </div>
-
-      <div class="section"></div>
-
-      <section class="section text-center">
-        <header>
-          <h2 class="text-center">Ready to Launch?</h2>
-        </header>
-
-        <p>
-          Enough talking, let's get right to it.
-        </p>
-
-        <div>
-          <a [routerLink]="['/contact']" class="btn btn--lg btn--outline btn--black">
-            <span aria-hidden="true" class="vertical-align">🚀 </span>
-            Let's go!
-          </a>
-        </div>
-      </section>
-    </div>
-  </section>
-</div>
