--- a/src/assets/sass/objects/_headings.scss
+++ b/src/assets/sass/objects/_headings.scss
@@ -1,11 +1,11 @@
-.heading-1 {
+.heading-1, .h3 {
   @extend h1;
 }
 
-.heading-2 {
+.heading-2, .h2 {
   @extend h2;
 }
 
-.heading-3 {
+.heading-3, .h3 {
   @extend h3;
 }
