--- a/src/app/pages/home/case-study/case-study.component.html
+++ b/src/app/pages/home/case-study/case-study.component.html
@@ -1,5 +1,5 @@
 <section class="case-study" [ngClass]="{'case-study--flipped': flip}" data-aos="fade-up" data-aos-duration="1000">
-  <div appParallax [preventMobile]="true" [ratio]=".02" class="case-study__image-desk">
+  <div appParallax [preventMobile]="true" [ratio]="-.05" class="case-study__image-desk">
     <img src="/assets/images/homepage/{{data.slug}}.png" alt="" class="img-fluid case-study__image">
   </div>
 
