--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,16 +2,6 @@
   <div class="container-fluid">
     <h1 class="sr-only">Design &amp; development powerhouse for SaaS products and websites</h1>
 
-    <section *ngIf="content?.acf.video_id">
-      <h2 class="sr-only">Who is Jupiter and the Giraffe?</h2>
-
-      <div appParallax [ratio]=".15" class="home__video">
-        <div appVideoLoad class="home__video-container"
-          [style.background-image]="'url(' + content.acf.video_poster + ')'" [videoId]="content.acf.video_id">
-        </div>
-      </div>
-    </section>
-
     <div class="home__tagline-wrapper">
       <div data-aos="fade-in" data-aos-duration="1000">
         <h2 class="hidden-md-up home__tagline">
@@ -31,15 +21,31 @@
     </div>
   </div>
 
-  <div (appDeferLoad)="showMyElement=true">
-    <app-case-studies-component *ngIf="work" [show]="showMyElement" [data]="[work[0], work[1], work[2]]"></app-case-studies-component>
-    <app-friends-component *ngIf="showMyElement"></app-friends-component>
+  <div>
+    <app-case-studies-component *ngIf="work" [show]="true" [data]="[work[0], work[1], work[2]]"></app-case-studies-component>
 
     <div class="container-fluid">
-      <app-benefits-component *ngIf="benefits" [benefits]="benefits"></app-benefits-component>
-      <app-quotes-component *ngIf="quotes" [quotes]="quotes"></app-quotes-component>
       <app-we-are-component></app-we-are-component>
       <app-services-component [services]="services"></app-services-component>
+    </div>
+
+    <app-friends-component></app-friends-component>
+
+    <div class="container-fluid">
+      <app-quotes-component *ngIf="quotes" [quotes]="quotes"></app-quotes-component>
+      <app-benefits-component *ngIf="benefits" [benefits]="benefits"></app-benefits-component>
+      <section *ngIf="content?.acf.video_id" class="section">
+        <h2 class="sr-only">Who is Jupiter and the Giraffe?</h2>
+
+        <div class="home__video">
+          <div
+            appVideoLoad class="home__video-container"
+            [style.background-image]="'url(' + content.acf.video_poster + ')'"
+            [videoId]="content.acf.video_id"
+          >
+          </div>
+        </div>
+      </section>
       <app-get-in-touch></app-get-in-touch>
     </div>
   </div>
