--- a/src/assets/sass/elements/_body.scss
+++ b/src/assets/sass/elements/_body.scss
@@ -1,14 +1,7 @@
 body {
   margin: 0;
   @include font-size($base-font);
-
-  &:after {
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
-    position: fixed;
-    bottom: 0;
-    content: '';
-    top: 0;
-    width: 100%;
-    z-index: -10;
-  }
+  background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
