--- a/src/app/pages/home/services/services.component.html
+++ b/src/app/pages/home/services/services.component.html
@@ -14,10 +14,11 @@
         <img
           [src]="service._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url"
           [srcset]="service._embedded['wp:featuredmedia'][0].media_details.sizes.large.source_url + ' 2x, ' + service._embedded['wp:featuredmedia'][0].media_details.sizes.medium.source_url + ' 1x'"
-          [alt]="service._embedded['wp:featuredmedia'][0].alt_text" class="img-fluid"
+          [alt]="service._embedded['wp:featuredmedia'][0].alt_text" class="services__image"
+          style="max-width: 150px;"
         >
 
-        <h3 class="services__service-title">{{service.title.rendered}}</h3>
+        <h3 class="services__heading">{{service.title.rendered}}</h3>
 
         <div class="services__service-text">
           <div [innerHTML]="service.excerpt.rendered"></div>
