--- a/src/app/pages/service/service.component.html
+++ b/src/app/pages/service/service.component.html
@@ -18,7 +18,7 @@
           </li>
         </ul>
 
-        <img src="{{content._embedded['wp:featuredmedia'][0].source_url}}" [alt]="content._embedded['wp:featuredmedia'][0].alt_text">
+        <img src="{{content._embedded['wp:featuredmedia'][0].source_url}}" [alt]="content._embedded['wp:featuredmedia'][0].alt_text" class="img-fluid">
       </div>
     </div>
 
