--- a/src/app/pages/service/service.component.html
+++ b/src/app/pages/service/service.component.html
@@ -3,21 +3,22 @@
     <app-back-button></app-back-button>
 
     <header>
-      <h1>{{content.title.rendered}}</h1>
+      <h1 [innerHTML]="content.title.rendered"></h1>
     </header>
 
     <div class="row">
-      <div class="col-sm" [innerHTML]="content.content.rendered"></div>
-      <div class="col-sm flex-column d-flex">
-        <ul class="white-bg__service-list row">
-          <li *ngFor="let service of content.acf.services" class="col-sm-6">
+      <div class="col-sm">
+        <div [innerHTML]="content.content.rendered" class="service__content"></div>
+        <ul class="white-bg__service-list service__list">
+          <li *ngFor="let service of content.acf.services" class="service__list-item">
             <h2 class="service__offering-heading">
               <a [routerLink]="service.link" *ngIf="service.link; else noLink">{{service.service}}</a>
               <ng-template #noLink>{{service.service}}</ng-template>
             </h2>
           </li>
         </ul>
-
+      </div>
+      <div class="col-sm flex-column d-flex">
         <img src="{{content._embedded['wp:featuredmedia'][0].source_url}}" [alt]="content._embedded['wp:featuredmedia'][0].alt_text" class="img-fluid">
       </div>
     </div>
