fix bulink 404s and link cms on case studies

--- a/src/app/global/hero/hero.component.html
+++ b/src/app/global/hero/hero.component.html
@@ -11,19 +11,8 @@
         A web studio out of this world.
       </div>
     </div>
-    <div class="row">
-      <div class="col text-right">
-        <div class="hero__button margin-top--lg" data-aos="zoom-out" data-aos-delay="600">
-          <a [routerLink]="['/contact']" class="btn btn--lg btn--primary btn--primary-outline">Contact us</a>
-        </div>
-        <div class="padding--lg"></div>
-      </div>
-      <div class="col line line--left text-left">
-        <div class="hero__button margin-top--lg" data-aos="zoom-out" data-aos-delay="900">
-          <a [routerLink]="['/work']" class="btn btn--lg">Our work</a>
-        </div>
-        <div class="padding--lg"></div>
-      </div>
+    <div class="margin-top--lg">
+      <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
     </div>
   </div>
 
@@ -44,16 +33,9 @@
       Beautiful SaaS product design and cutting-edge code for future-thinkers in the digital age.
     </p>
 
-    <div class="row" data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
-      <div class="col text-right">
-        <div class="margin-top--lg">
-            <a [routerLink]="['/work']" class="hero__button btn btn--lg btn--primary btn--primary-outline">See the work</a>
-        </div>
-      </div>
-      <div class="col text-left">
-        <div class="margin-top--lg">
-            <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
-        </div>
+    <div data-aos="fade-in" data-aos-delay="600" data-aos-duration="3000">
+      <div class="margin-top--lg">
+          <a [routerLink]="['/contact']" class="hero__button btn btn--lg">Book a consultation</a>
       </div>
     </div>
 
