--- a/src/app/pages/home/case-study/case-study.component.scss
+++ b/src/app/pages/home/case-study/case-study.component.scss
@@ -92,4 +92,13 @@
       }
     }
   }
+
+  &__tagline {
+    @include title-font();
+
+    @include md {
+      line-height: 1;
+      @include font-size($heading-2);
+    }
+  }
 }
