--- a/src/app/pages/home/we-are/we-are.component.html
+++ b/src/app/pages/home/we-are/we-are.component.html
@@ -1,20 +1,24 @@
-<div class="section">
+<div class="section we-are">
     <h2 class="text-center" data-aos="fade-in">We are</h2>
+    <!-- <img src="/assets/images/jupiter.svg" alt="" class="img-fluid we-are__img--small"> -->
 
     <div class="row text-center" style="align-items: center;">
-      <div class="col">
+      <div class="col-sm">
         <h3 class="text-center" data-aos="fade-in" data-aos-delay="200">Half Devs</h3>
       </div>
-      <div class="col">
-        <img src="/assets/images/jupiter.svg" alt="" class="img-fluid">
+      <div class="col-sm">
+        <img src="/assets/images/jupiter.svg" alt="" class="img-fluid we-are__img">
       </div>
-      <div class="col">
+      <div class="col-sm">
         <h3 class="text-center" data-aos="fade-in" data-aos-delay="400">Half Creatives</h3>
+      </div>
+      <div class="col we-are__thinkers h3 margin-bottom--lg " data-aos="fade-in" data-aos-delay="800">
+        All Thinkers
       </div>
     </div>
 
     <div data-aos="fade-in" data-aos-delay="400" class="text-center">
-      <h3 class="text-center margin-top--lg padding-top--lg margin-bottom--lg padding-bottom--lg">All Thinkers</h3>
+      <h3 class="text-center margin-top--lg padding-top--lg margin-bottom--lg padding-bottom--lg we-are__thinkers--large">All Thinkers</h3>
 
       <p style="max-width: 800px; margin: 0 auto;">
         We're not just kick-ass developers and designers. Creative strategy lies at the heart of everything we do so you can be confident
