--- a/src/app/pages/home/case-study/case-study.component.html
+++ b/src/app/pages/home/case-study/case-study.component.html
@@ -1,13 +1,18 @@
 <section class="case-study" [ngClass]="{'case-study--flipped': flip}" data-aos="fade-up" data-aos-duration="1000">
   <div appParallax [preventMobile]="true" [ratio]="-.05" class="case-study__image-desk">
-    <img src="/assets/images/homepage/{{data.slug}}.png" alt="" class="img-fluid case-study__image">
+      <img
+        [src]="data.acf.homepage_image.sizes.medium"
+        alt=""
+        class="img-fluid case-study__image"
+        [srcset]="data.acf.homepage_image.sizes.medium + ' 1x, ' + data.acf.homepage_image.sizes.large + ' 2x'"
+      >
   </div>
 
   <div class="case-study__info-wrap">
     <div class="case-study__info">
       <h3 *ngIf="data.title" class="case-study__title">{{data.title.rendered}}</h3>
 
-      <p class="h2" *ngIf="data.acf?.project_tagline">{{data.acf.project_tagline}}</p>
+      <p class="case-study__tagline" *ngIf="data.acf?.project_tagline">{{data.acf.project_tagline}}</p>
 
       <div *ngIf="data.excerpt" [innerHTML]="data.excerpt.rendered"></div>
 
